
INCLUDES = -I$(top_srcdir)/src/libstrongswan

ipseclib_LTLIBRARIES = libtls.la
libtls_la_SOURCES = \
	tls_protection.h tls_protection.c \
	tls_compression.h tls_compression.c \
	tls_fragmentation.h tls_fragmentation.c \
	tls_alert.h tls_alert.c \
	tls_crypto.h tls_crypto.c \
	tls_prf.h tls_prf.c \
	tls_socket.h tls_socket.c \
	tls_eap.h tls_eap.c \
	tls_cache.h tls_cache.c \
	tls_peer.h tls_peer.c \
	tls_server.h tls_server.c \
	tls_handshake.h tls_application.h tls.h tls.c
